--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ margin: 0px;
 
 
 header {
-    border-bottom: solid 2px rgb(42 ,122 ,228);
+    border-bottom: solid 2px rgb(42, 122,228);
  padding: 20px;
  font-size: 32px;
- color: rgb(42 ,122 ,228);
+ color: rgb(42 , 122,228);
 }
 
 section {
