--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
  color: rgb(42 , 122,228);
 }
 
-section {
+.chamada {
      background: rgb(184, 156, 213);
      padding-bottom: 80px;
      padding-top: 80px;
@@ -39,4 +39,11 @@ img {
 
 .categoria-video {
      display: flex;
+     overflow-x: auto;
+     gap: 10px;
+}
+
+.categoria {
+     padding-left: 20px;
+     padding-right: 20px;
 }
