--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
 color:white;
 background: black;
 margin: 0px;
-font-family: "Chakra Petch", sans-serif
+font-family: "Chakra Petch", sans-serif;
+margin-top: 100px;
 }
 
 
@@ -46,4 +47,19 @@ img {
 .categoria {
      padding-left: 20px;
      padding-right: 20px;
+     margin-top: 50px;
+}
+
+.categoria-video img {
+     opacity: 0.5;
+     height: 200px;
+}
+
+.categoria-video img:hover {
+     opacity: 1.0;
+     border: 5px solid green;
+}
+
+.categoria h2 {
+     color:rgb(42 , 122,228)
 }
